--- a/programs/voting/Cargo.toml
+++ b/programs/voting/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "my-khe"
+name = "voting"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "my_khe"
+name = "vogin"
 
 [features]
 no-entrypoint = []
