Add anchor run command

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,6 +3,7 @@ seeds = false
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+copy = ""
 
 [provider]
 cluster = "localnet"
