--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     },
     "dependencies": {
         "@project-serum/anchor": "^0.24.2",
-        "@saberhq/anchor-contrib": "^1.14.5"
+        "@saberhq/anchor-contrib": "^1.14.5",
+        "@saberhq/token-utils": "^1.14.5"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
