--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@project-serum/anchor": "^0.24.2",
         "@saberhq/anchor-contrib": "^1.14.5",
+        "@saberhq/solana-contrib": "^1.14.5",
         "@saberhq/token-utils": "^1.14.5"
     },
     "devDependencies": {
