--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "@project-serum/anchor": "^0.24.2",
         "@saberhq/anchor-contrib": "^1.14.5",
         "@saberhq/solana-contrib": "^1.14.5",
-        "@saberhq/token-utils": "^1.14.5"
+        "@saberhq/token-utils": "^1.14.5",
+        "jsbi": "^4.3.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
