--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "dependencies": {
         "@project-serum/anchor": "^0.24.2",
         "@saberhq/anchor-contrib": "^1.14.5",
+        "@saberhq/chai-solana": "^1.14.5",
         "@saberhq/solana-contrib": "^1.14.5",
         "@saberhq/token-utils": "^1.14.5",
+        "chai": "4.3.4",
         "jsbi": "^4.3.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "chai": "^4.3.4",
         "eslint": "^8.23.0",
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
