--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "@saberhq/chai-solana": "^1.14.5",
         "@saberhq/solana-contrib": "^1.14.5",
         "@saberhq/token-utils": "^1.14.5",
-        "chai": "4.3.4",
+        "chai": "4.3.0",
         "jsbi": "^4.3.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
+        "@typescript-eslint/eslint-plugin": "latest",
+        "@typescript-eslint/parser": "latest",
         "eslint": "^8.23.0",
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
