--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "@saberhq/token-utils": "^1.14.5",
         "chai": "4.3.0",
         "chai-as-promised": "^7.1.1",
-        "jsbi": "^4.3.0"
+        "jsbi": "^4.3.0",
+        "tiny-invariant": "^1.2.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
