--- a/programs/locked-voter/Cargo.toml
+++ b/programs/locked-voter/Cargo.toml
@@ -18,3 +18,4 @@ default = []
 [dependencies]
 anchor-lang = "0.24.2"
 anchor-spl = "0.24.2"
+mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
