--- a/programs/locked-voter/Cargo.toml
+++ b/programs/locked-voter/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = "0.24.2"
 anchor-spl = "0.24.2"
 mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
+spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
