--- a/programs/locked-voter/Cargo.toml
+++ b/programs/locked-voter/Cargo.toml
@@ -16,7 +16,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.24.2"
+anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
 anchor-spl = "0.24.2"
 mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
 spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
