--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@saberhq/chai-solana": "^1.14.5",
         "@saberhq/solana-contrib": "^1.14.5",
         "@saberhq/token-utils": "^1.14.5",
+        "@solana/spl-token": "^0.3.5",
         "chai": "4.3.0",
         "chai-as-promised": "^7.1.1",
         "jsbi": "^4.3.0",
