--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
+        "@metaplex-foundation/mpl-token-metadata": "^1.2",
         "@project-serum/anchor": "^0.24.2",
         "@saberhq/anchor-contrib": "^1.14.5",
         "@saberhq/chai-solana": "^1.14.5",
@@ -15,6 +16,7 @@
         "chai": "4.3.0",
         "chai-as-promised": "^7.1.1",
         "jsbi": "^4.3.0",
+        "l": "^0.6.0",
         "tiny-invariant": "^1.2.0"
     },
     "devDependencies": {
