--- a/Anchor.toml
+++ b/Anchor.toml
@@ -2,7 +2,7 @@
 seeds = false
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha tests/*.spec.ts"
 copy = "cp -r ./target/idl ./src/"
 
 [provider]
