--- a/package.json
+++ b/package.json
@@ -1,34 +1,56 @@
 {
-    "scripts": {
-        "idl:generate": "./scripts/parse-idls.sh && ./scripts/generate-idl-types.sh",
-        "test": "anchor test",
-        "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
-    },
-    "dependencies": {
-        "@metaplex-foundation/mpl-token-metadata": "^1.2",
-        "@project-serum/anchor": "^0.24.2",
-        "@saberhq/anchor-contrib": "^1.14.5",
-        "@saberhq/chai-solana": "^1.14.5",
-        "@saberhq/solana-contrib": "^1.14.5",
-        "@saberhq/token-utils": "^1.14.5",
-        "@solana/spl-token": "^0.3.5",
-        "chai": "4.3.0",
-        "chai-as-promised": "^7.1.1",
-        "jsbi": "^4.3.0",
-        "l": "^0.6.0",
-        "tiny-invariant": "^1.2.0"
-    },
-    "devDependencies": {
-        "@types/bn.js": "^5.1.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "latest",
-        "@typescript-eslint/parser": "latest",
-        "eslint": "^8.23.0",
-        "mocha": "^9.0.3",
-        "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^4.3.5"
-    }
+  "name": "my-khe",
+  "version": "0.0.1",
+  "description": "My Khe Project",
+  "keywords": [
+    "solana",
+    "anchor"
+  ],
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist/",
+    "src/"
+  ],
+  "scripts": {
+    "build": "rm -fr dist/ && tsc -P tsconfig.cjs.json && tsc -P tsconfig.esm.json",
+    "clean": "rm -fr dist/",
+    "idl:generate": "./scripts/parse-idls.sh && ./scripts/generate-idl-types.sh",
+    "typecheck": "tsc",
+    "test": "anchor test",
+    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+  },
+  "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^1.2",
+    "chai": "4.3.0",
+    "chai-as-promised": "^7.1.1",
+    "jsbi": "^4.3.0",
+    "l": "^0.6.0",
+    "tiny-invariant": "^1.2.0"
+  },
+  "devDependencies": {
+    "@project-serum/anchor": "^0.25.0",
+    "@saberhq/anchor-contrib": "^1.14.6",
+    "@saberhq/chai-solana": "^1.14.6",
+    "@saberhq/solana-contrib": "^1.12.44",
+    "@saberhq/token-utils": "^1.12.44",
+    "@types/bn.js": "^5.1.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^8.23.0",
+    "mocha": "^9.0.3",
+    "prettier": "^2.6.2",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "@project-serum/anchor": ">=0.24",
+    "@saberhq/anchor-contrib": "^1.13",
+    "@saberhq/solana-contrib": "^1.13",
+    "@saberhq/token-utils": "^1.13",
+    "jsbi": "^3 || ^4"
+  }
 }
