--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@saberhq/chai-solana": "^1.12.44",
     "@saberhq/solana-contrib": "^1.12.44",
     "@saberhq/token-utils": "^1.12.44",
+    "@solana/web3.js": "^1.34.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
