--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@saberhq/chai-solana": "^1.12.44",
     "@saberhq/solana-contrib": "^1.12.44",
     "@saberhq/token-utils": "^1.12.44",
+    "@saberhq/tsconfig": "^1.12.44",
     "@solana/web3.js": "^1.34.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
@@ -45,6 +46,7 @@
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
@@ -52,6 +54,7 @@
     "@saberhq/anchor-contrib": "^1.13",
     "@saberhq/solana-contrib": "^1.13",
     "@saberhq/token-utils": "^1.13",
+    "@solana/web3.js": "^1",
     "jsbi": "^3 || ^4"
   }
 }
