--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "rm -fr dist/ && tsc -P tsconfig.cjs.json && tsc -P tsconfig.esm.json",
     "clean": "rm -fr dist/",
-    "idl:generate": "./scripts/parse-idls.sh && ./scripts/generate-idl-types.sh",
+    "idl:generate": "./scripts/generate-idl-types.sh",
     "typecheck": "tsc",
     "test": "anchor test",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
@@ -36,7 +36,7 @@
     "@saberhq/solana-contrib": "^1.12.44",
     "@saberhq/token-utils": "^1.12.44",
     "@saberhq/tsconfig": "^1.12.44",
-    "@solana/web3.js": "^1.34.0",
+    "@solana/web3.js": "^1.62.1",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
@@ -54,7 +54,7 @@
     "@saberhq/anchor-contrib": "^1.13",
     "@saberhq/solana-contrib": "^1.13",
     "@saberhq/token-utils": "^1.13",
-    "@solana/web3.js": "^1",
+    "@solana/web3.js": "1.62.1",
     "jsbi": "^3 || ^4"
   }
 }
