--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
-    "@project-serum/anchor": ">=0.24",
-    "@saberhq/anchor-contrib": "^1.13",
-    "@saberhq/solana-contrib": "^1.13",
-    "@saberhq/token-utils": "^1.13",
-    "@solana/web3.js": "1.62.1",
+    "@project-serum/anchor": ">=0.19",
+    "@saberhq/anchor-contrib": "^1.11",
+    "@saberhq/solana-contrib": "^1.11",
+    "@saberhq/token-utils": "^1.11",
+    "@solana/web3.js": "^1",
     "jsbi": "^3 || ^4"
   }
 }
