--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^1.2",
-    "chai": "4.3.0",
-    "chai-as-promised": "^7.1.1",
     "jsbi": "^4.3.0",
     "l": "^0.6.0",
     "tiny-invariant": "^1.2.0"
@@ -42,6 +40,7 @@
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "chai": "=4.3.4",
     "eslint": "^8.23.0",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
