--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rayon = { version = "1", optional = true }
 thiserror = "1.0.48"
 
 group = "0.13.0"
 ff = "0.13.0"
+pairing_lib = { version = "0.23.0", package = "pairing" }
 
 bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
@@ -19,7 +21,8 @@ blst_lib = { version = "=0.3.10", optional = true, package = "blst" }
 blstrs = { version = "0.7.1", optional = true }
 
 [features]
-default = ["pairing"]
+default = ["pairing", "multicore"]
+multicore = ["rayon"]
 pairing = ["bls12_381", "sha2", "hkdf"]
 blst = ["blst_lib", "blstrs"]
 blst-portable = ["blst_lib", "blst_lib/portable", "blstrs/portable"]
