--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 rayon = { version = "1", optional = true }
 thiserror = "1.0.48"
+rand_core = "0.6.4"
 
 group = "0.13.0"
 ff = "0.13.0"
