--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 rayon = { version = "1", optional = true }
-thiserror = "1.0.48"
-rand_core = "0.6.4"
+rand_core = "0.6.0"
+thiserror = "1.0"
+subtle = "2.2.1"
 
-group = "0.13.0"
 ff = "0.13.0"
+group = "0.13.0"
 pairing_lib = { version = "0.23.0", package = "pairing" }
 
 bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
@@ -19,7 +20,7 @@ sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.11.0", optional = true }
 
 blst_lib = { version = "=0.3.10", optional = true, package = "blst" }
-blstrs = { version = "0.7.1", optional = true }
+blstrs = { version = "0.7.0", optional = true }
 
 [features]
 default = ["pairing", "multicore"]
@@ -27,3 +28,7 @@ multicore = ["rayon"]
 pairing = ["bls12_381", "sha2", "hkdf"]
 blst = ["blst_lib", "blstrs"]
 blst-portable = ["blst_lib", "blst_lib/portable", "blstrs/portable"]
+
+[dev-dependencies]
+rand = "0.8"
+rand_chacha = "0.3.1"
