--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,8 @@ blst-portable = ["blst_lib", "blst_lib/portable", "blstrs/portable"]
 
 [dev-dependencies]
 rand = "0.8"
+base64 = "0.13.0"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.52"
+base64-serde = "0.6.1"
 rand_chacha = "0.3.1"
